objects/Case.object
<CustomObject>
    <fields>
        <fullName>PC_PA_Status__c</fullName>
        <description>The prior authorization status</description>
        <label>PA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted to Provider</fullName>
                </value>
                <value>
                    <fullName>Submitted to Payer</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Appeal Request</fullName>
                </value>
                <value>
                    <fullName>PA shared with Provider</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Appeal Response</fullName>
                    <isActive>false</isActive>
                    <label>Appeal Response</label>
                </value>
                <value>
                    <fullName>Appealed</fullName>
                    <isActive>false</isActive>
                    <label>Appealed</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                    <isActive>false</isActive>
                    <label>Archived</label>
                </value>
                <value>
                    <fullName>Cancel Request Sent</fullName>
                    <isActive>false</isActive>
                    <label>Cancel Request Sent</label>
                </value>
                <value>
                    <fullName>Failure</fullName>
                    <isActive>false</isActive>
                    <label>Failure</label>
                </value>
                <value>
                    <fullName>PA Request Submitted to Plan</fullName>
                    <isActive>false</isActive>
                    <label>PA Request Submitted to Plan</label>
                </value>
                <value>
                    <fullName>PA accessed by Provider</fullName>
                    <isActive>false</isActive>
                    <label>PA accessed by Provider</label>
                </value>
                <value>
                    <fullName>Plan PA Response</fullName>
                    <isActive>false</isActive>
                    <label>Plan PA Response</label>
                </value>
                <value>
                    <fullName>Plan Question Response</fullName>
                    <isActive>false</isActive>
                    <label>Plan Question Response</label>
                </value>
                <value>
                    <fullName>Plan Question Set Ready for Provider</fullName>
                    <isActive>false</isActive>
                    <label>Plan Question Set Ready for Provider</label>
                </value>
                <value>
                    <fullName>Question Request Submitted to Plan</fullName>
                    <isActive>false</isActive>
                    <label>Question Request Submitted to Plan</label>
                </value>
                <value>
                    <fullName>Sent to Plan</fullName>
                    <isActive>false</isActive>
                    <label>Sent to Plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PA_Submitted_On__c</fullName>
        <description>Date when the prior authorization is submitted</description>
        <label>Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_PatientEligibleforAssistanceProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate if the linked patient account is eligible for assistance program or not.</description>
        <label>Patient eligible for Assistance Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Patient_Date_of_Birth__c</fullName>
        <description>The date of birth of the patient</description>
        <formula>Account.PC_Date_of_Birth__c</formula>
        <label>Patient Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Phone__c</fullName>
        <description>The patient’s phone number</description>
        <formula>Account.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated physician account</description>
        <label>Physician</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PC_Physician</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Physician</relationshipLabel>
        <relationshipName>Physician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Preferred_Communication_Channel__c</fullName>
        <description>The patient’s preferred communication channel</description>
        <formula>TEXT ( Account.PC_Preferred__c )</formula>
        <label>Preferred Communication Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Previous_Status__c</fullName>
        <description>The previous status of the case - primarily used for Auditing or to determine the prior status of on-hold cases</description>
        <label>Previous Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Program_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient Connect custom look up field to associate program coverage record to capture outcome of BI/BV case, PAP case or Copay case</description>
        <label>Program Coverage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PC_Program_Coverage__c.PC_Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.PC_Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>PC_Program_Coverage__c.PC_hasActivePA__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>You can see only program coverage associated with the current program case.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PC_Program_Coverage__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>PC_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Program_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the associated engagement program’s product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.PC_Engagement_Program__c</field>
                <operation>equals</operation>
                <valueField>PC_Engagement_Program_Product__c.PC_Engagement_Program__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PC_Engagement_Program_Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the associated parent program case</description>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.Type</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Reason_for_Withdrawal__c</fullName>
        <description>Captures the reason to withdraw from the program</description>
        <label>Reason for Withdrawal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Reasons_for_Withdrawal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Reimbursment_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reimbursement Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Request_Date__c</fullName>
        <description>The service request date of access cases. The Support Model activity generation is based on this date for access cases</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Requires_Letter_of_Medical_Necessity__c</fullName>
        <description>Indicates if PA or SA requires a Letter of Medical Necessity</description>
        <label>Requires Letter of Medical Necessity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Requires_Specific_Form__c</fullName>
        <description>Indicates if SA or PA requires a specific form</description>
        <label>Requires Specific Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Requires_Step_Therapy__c</fullName>
        <description>Indicates if SA or PA requires a step therapy</description>
        <label>Requires Step Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Salutation__c</fullName>
        <description>The salutation of the patient such as Mr., Ms., Mrs., and Dr.</description>
        <formula>TEXT ( Account.PC_Salutation__c )</formula>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_State__c</fullName>
        <description>The State associated with the primary address of the patient</description>
        <formula>TEXT(Account.PC_Primary_Address__r.PC_State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Status_Indicator_1__c</fullName>
        <description>The consent status of the patient</description>
        <label>CONSENT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Case_Status_Indicators</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Status_Indicator_2__c</fullName>
        <description>The coverage status of the patient</description>
        <label>COVERAGE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Case_Status_Indicators</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Status_Indicator_3__c</fullName>
        <description>The engagement status of the patient</description>
        <label>ENGAGEMENT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Case_Status_Indicators</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Support_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Support Model associated with the program or the access case</description>
        <label>Support Model</label>
        <referenceTo>PC_Support_Model__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Treatment_Start_Date__c</fullName>
        <description>The date on which the patient started the treatment</description>
        <label>Treatment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Withdrawal_Date__c</fullName>
        <description>The date on which the patient withdrew from the program</description>
        <label>Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Zip_Code__c</fullName>
        <description>The zip/postal code associated with the primary address of the patient</description>
        <formula>Account.PC_Primary_Address__r.PC_Zip_Code__c</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ePA_Ext_Id__c</fullName>
        <description>Used to track the ePA submitted to external ePA service provider</description>
        <label>ePA Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ePA_URL__c</fullName>
        <description>URL of the submitted ePA</description>
        <label>ePA URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Q1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Q1</label>
        <queue>Q1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__CareGap</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__CareGap</businessProcess>
        <description>Defines a care gap for an individual</description>
        <label>CareGap</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CarePlan</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Defines a care plan for an individual and their care team</description>
        <label>CarePlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Alternate_Funding</fullName>
        <active>true</active>
        <businessProcess>PC_AlternateFunding</businessProcess>
        <description>Used for cases where patient requires compassionate funding</description>
        <label>Alternate Funding</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Appeal</fullName>
        <active>true</active>
        <businessProcess>PC_Appeal</businessProcess>
        <description>Used for cases to manage appeals or appeals consultation</description>
        <label>Appeal</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Benefits_Investigation_Benefits_Verification</fullName>
        <active>true</active>
        <businessProcess>PC_BIBV</businessProcess>
        <description>Used for cases involving research to determine or verify a patient&apos;s benefits</description>
        <label>BI / BV</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Copay</fullName>
        <active>true</active>
        <businessProcess>PC_Copay</businessProcess>
        <description>Used for cases to manage requests for copay cards or funds</description>
        <label>Copay</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Enrollment</fullName>
        <active>true</active>
        <businessProcess>PC_Enrollment</businessProcess>
        <description>Used for cases that track and manage the patient enrollment process</description>
        <label>Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_PAP</fullName>
        <active>true</active>
        <businessProcess>PC_PAP</businessProcess>
        <description>Used for cases that track and manage the patient assistance program (PAP)</description>
        <label>PAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Prior_Authorization</fullName>
        <active>true</active>
        <businessProcess>PC_PriorAuthorization</businessProcess>
        <description>Used for cases where a prior or special authorization is required</description>
        <label>Prior Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Program</fullName>
        <active>true</active>
        <businessProcess>PC_Program</businessProcess>
        <description>Used to manage and summarize a Patient&apos;s patient support program (PSP)</description>
        <label>Program</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACLS_Validate_Appeal_Outcome_Status</fullName>
        <active>true</active>
        <description>Case status for Appeal cannot be moved to Completed, unless Appeal Outcome is entered</description>
        <errorConditionFormula>IF(ISPICKVAL( Status , &apos;Completed&apos;) &amp;&amp; RecordType.DeveloperName == &apos;PC_Appeal&apos;&amp;&amp; ISPICKVAL( ACLS_Appeal_Outcome__c ,&apos;&apos; ),true,false)</errorConditionFormula>
        <errorMessage>Please enter Appeal Outcome in the Appeal Section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACLS_Validate_DenialReason_Denied_Outcme</fullName>
        <active>true</active>
        <description>If Appeal Outcome = Denied, user needs to enter Denial Reason</description>
        <errorConditionFormula>IF( ISPICKVAL( ACLS_Appeal_Outcome__c , &apos;Denied&apos;) &amp;&amp; ISPICKVAL( PC_Denial_Reason__c ,&apos;&apos;),true,false)</errorConditionFormula>
        <errorMessage>Please select appropriate Denial reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Validate_Withdrawn_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Status , &apos;Withdrawn&apos;),  ISBLANK(TEXT(PC_Withdrawal_Date__c )))</errorConditionFormula>
        <errorDisplayField>PC_Withdrawal_Date__c</errorDisplayField>
        <errorMessage>Withdrawal Date is required  on Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Validate_Withdrawn_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Status , &apos;Withdrawn&apos;), ISBLANK( TEXT(PC_Reason_for_Withdrawal__c )))</errorConditionFormula>
        <errorDisplayField>PC_Reason_for_Withdrawal__c</errorDisplayField>
        <errorMessage>Reason for Withdrawal is required on Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Physician_Account_Record_Type_Validation</fullName>
        <active>true</active>
        <description>Rule to ensure that filter for Account field is respected</description>
        <errorConditionFormula>IF(OR(ISBLANK(PC_Physician__c),ISNULL(PC_Physician__c)), FALSE,   PC_Physician__r.RecordType.DeveloperName !=&apos;PC_Physician&apos;)</errorConditionFormula>
        <errorDisplayField>PC_Physician__c</errorDisplayField>
        <errorMessage>Account selected must be of the Record Type Physician</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prescription_Program_and_Active_PA_Val</fullName>
        <active>true</active>
        <description>Rule to ensure that filter for Prescription field is respected</description>
        <errorConditionFormula>IF(OR( ISBLANK(PC_PA_Prescription__c),ISNULL( PC_PA_Prescription__c )),FALSE,OR(AND(PC_PA_Prescription__r.PC_hasActivePA__c == True,ISCHANGED(PC_PA_Prescription__c)), PC_PA_Prescription__r.PC_Program_Case__r.Id != PC_Program__r.Id))</errorConditionFormula>
        <errorDisplayField>PC_PA_Prescription__c</errorDisplayField>
        <errorMessage>Program Case on Prescription selected must match the Program Case of this Case and there should be no Active PA for the selected Prescription</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Engagement_Program_Validation</fullName>
        <active>true</active>
        <description>Rule to ensure that filter for Product field is respected</description>
        <errorConditionFormula>IF(OR(ISBLANK(  PC_Program_Product__c),ISNULL(PC_Program_Product__c)), FALSE, PC_Program_Product__r.PC_Engagement_Program__r.Id != PC_Engagement_Program__r.Id)</errorConditionFormula>
        <errorDisplayField>PC_Program_Product__c</errorDisplayField>
        <errorMessage>Product selected must have Engagement Program same as this Program case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Case_Type_Validation</fullName>
        <active>true</active>
        <description>Rule to ensure that filter for Case field is respected</description>
        <errorConditionFormula>IF(OR(ISBLANK( PC_Program__c), ISNULL(PC_Program__c)), FALSE, NOT(ISPICKVAL(PC_Program__r.Type, &quot;Program&quot;)))</errorConditionFormula>
        <errorDisplayField>PC_Program__c</errorDisplayField>
        <errorMessage>Case selected must be of the type Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Coverage_Program_ActivePA_Val</fullName>
        <active>true</active>
        <description>Rule to ensure that filter for Program Coverage field is respected</description>
        <errorConditionFormula>IF(OR(ISBLANK( PC_Program_Coverage__c ),ISNULL(PC_Program_Coverage__c )), FALSE, OR(PC_Program_Coverage__r.PC_Program__r.Id !=   PC_Program__r.Id ,  PC_Program_Coverage__r.PC_hasActivePA__c =true))</errorConditionFormula>
        <errorDisplayField>PC_Program_Coverage__c</errorDisplayField>
        <errorMessage>Program Case on Program Coverage selected must match the Program Case of this Case and there should be no Active PA with the selected Program Coverage</errorMessage>
    </validationRules>
</CustomObject>